--- a/PyQtLearn/UI/RasterBand.ui
+++ b/PyQtLearn/UI/RasterBand.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>栅格处理</string>
+   <string>栅格读取</string>
   </property>
   <widget class="QToolButton" name="btn_DataInput">
    <property name="geometry">
@@ -24,19 +24,6 @@
    </property>
    <property name="text">
     <string>浏览</string>
-   </property>
-  </widget>
-  <widget class="QProgressBar" name="progressBar">
-   <property name="geometry">
-    <rect>
-     <x>100</x>
-     <y>140</y>
-     <width>340</width>
-     <height>30</height>
-    </rect>
-   </property>
-   <property name="value">
-    <number>0</number>
    </property>
   </widget>
   <widget class="QLabel" name="label">
@@ -78,6 +65,9 @@
      <width>331</width>
      <height>31</height>
     </rect>
+   </property>
+   <property name="readOnly">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
